# ondeck

./: .gitignore  Pipfile  Procfile  README.md  requirements.txt
backend/: db.json  ondeck.crt  ondeck.key  pyproject.toml  setup.cfg
backend/auth/: models.py
backend/auth/providers/: __init__.py  base.py  pipeline.py
backend/auth/providers/github/: __init__.py  api.py  provider.py
backend/auth/providers/slack/: api.py  provider.py
backend/auth/providers/slack_bot/: provider.py
backend/command/: urls.py  views.py
backend/config/: settings.py  urls.py  wsgi.py
backend/identity/: models.py  urls.py  views.py
backend/identity/migrations/: 0001_initial.py  0003_auto_20210615_0004.py
backend/integrations/: models.py  urls.py
backend/integrations/github/: urls.py  views.py
backend/integrations/migrations/: 0001_initial.py  0002_auto_20210614_1518.py  0003_auto_20210614_1911.py  0004_auto_20210614_2301.py  0005_repository_watchers.py  0006_bot_workspaces.py  0007_bot_provider.py
backend/integrations/slack/: urls.py  views.py
backend/ondeck/: models.py
backend/ondeck/migrations/: 0002_auto_20200225_2003.py  0005_user_name.py  0006_auto_20200409_0336.py  0012_auto_20200825_1638.py  0013_add_search_to_workspace.py  0014_add_search_to_board.py  0015_add_search_to_ticket.py
backend/ondeck/serializers/: __init__.py  column.py  tag.py  workspace.py
backend/ondeck/views/: board.py  column.py  comment.py  generics.py  ticket.py  user.py  viewsets.py  workspace.py
backend/upload/: views.py
backend/web/: loaders.py  views.py
client/: .env  package.json
(+193 files in other folders)
