[tool.poetry]
name = "ondeck"
version = "0.1.0"
description = ""
authors = ["boertel <benjamin.oertel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "2.2"
djangorestframework = "^3.12.2"
django-extensions = "^3.1.0"
django-cors-headers = "^3.5.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
requests = "^2.25.0"
requests-oauthlib = "^1.3.0"
boto = "^2.49.0"
django-reversion = "^3.0.8"
python-decouple = "^3.3"
django-storages = "^1.10.1"
gunicorn = "^20.0.4"
django-meilisearch = {git = "https://github.com/boertel/django-meilisearch", rev = "11126d3"}
sentry-sdk = "^0.19.5"
python-dotenv = "^0.15.0"
django-tsvector-field = "^0.9.5"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
